--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="@dimen/LL_main_height_hearts"
     android:layout_alignParentTop="true"
     android:layout_alignParentRight="true"
-    android:layout_marginRight="@dimen/defult_margin"
-    android:layout_marginTop="@dimen/defult_margin">
+    android:layout_marginRight="@dimen/default_margin"
+    android:layout_marginTop="@dimen/default_margin_for_hearts">
 
 <com.google.android.material.imageview.ShapeableImageView
     android:id="@+id/heart0_main"
@@ -52,7 +52,7 @@
         android:layout_width="300dp"
         android:layout_height="@dimen/LL_main_height_hearts"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="@dimen/margin_bottom_for_cars"
         android:layout_centerInParent="true">
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -93,8 +93,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:clickable="true"
-        android:layout_marginLeft="@dimen/defult_margin"
-        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="@dimen/default_margin"
+        android:layout_marginBottom="@dimen/margin_for_arrow"
         app:icon="@drawable/left_arrow_1_svgrepo_com"/>
 
     <com.google.android.material.button.MaterialButton
@@ -103,9 +103,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:text="Start Game"
-        android:textSize="20sp"
-        android:layout_marginBottom="60dp"
+        android:text="@string/start_game_text_main_BTN"
+        android:textSize="@dimen/main_BTN_start_game_text_size"
+        android:layout_marginBottom="@dimen/margin_for_arrow"
         android:textStyle="bold"/>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -115,124 +115,124 @@
         android:clickable="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="@dimen/defult_margin"
-        android:layout_marginBottom="60dp"
+        android:layout_marginRight="@dimen/default_margin"
+        android:layout_marginBottom="@dimen/margin_for_arrow"
         app:icon="@drawable/right_arrow_1_svgrepo_com"/>
 
     <GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="300dp"
-        android:layout_height="800dp"
+        android:layout_width="@dimen/width_of_matrix_rocks"
+        android:layout_height="@dimen/height_of_matrix_rocks"
         android:layout_centerInParent="true"
         android:columnCount="3"
         android:rowCount="4">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock0"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_margin="33dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock1"
             android:layout_row="0"
             android:layout_column="1"
-            android:layout_margin="33dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock2"
             android:layout_row="0"
             android:layout_column="2"
-            android:layout_margin="33dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock3"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock4"
             android:layout_row="1"
             android:layout_column="1"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock5"
             android:layout_row="1"
             android:layout_column="2"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock6"
             android:layout_row="2"
             android:layout_column="0"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock7"
             android:layout_row="2"
             android:layout_column="1"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock8"
             android:layout_row="2"
             android:layout_column="2"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:id="@+id/rock9"
             android:layout_row="3"
             android:layout_column="0"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com"/>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
             android:id="@+id/rock10"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:layout_row="3"
             android:layout_column="1"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
             android:id="@+id/rock11"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/height_for_each_rock"
             android:layout_row="3"
             android:layout_column="2"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_in_matrix"
             android:src="@drawable/rock_svgrepo_com" />
 
     </GridLayout>
