--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,18 @@
 <resources>
     <dimen name="LL_main_width_hearts">140dp</dimen>
     <dimen name="LL_main_height_hearts">40dp</dimen>
-    <dimen name="defult_margin">10dp</dimen>
+    <dimen name="default_margin">10dp</dimen>
     <dimen name="margin_main_each_heart">40dp</dimen>
     <dimen name="margin_main_for_car">40dp</dimen>
     <dimen name="margin_bottom_for_car">90dp</dimen>
     <dimen name="margin_for_cars">70dp</dimen>
     <dimen name="size_of_text_lost">50sp</dimen>
+    <dimen name="default_margin_for_hearts">30dp</dimen>
+    <dimen name="margin_bottom_for_cars">200dp</dimen>
+    <dimen name="margin_for_arrow">60dp</dimen>
+    <dimen name="main_BTN_start_game_text_size">20sp</dimen>
+    <dimen name="width_of_matrix_rocks">300dp</dimen>
+    <dimen name="height_of_matrix_rocks">800dp</dimen>
+    <dimen name="height_for_each_rock">120dp</dimen>
+    <dimen name="margin_in_matrix">30dp</dimen>
 </resources>
