--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,11 +9,25 @@
     <dimen name="margin_for_cars">70dp</dimen>
     <dimen name="size_of_text_lost">50sp</dimen>
     <dimen name="default_margin_for_hearts">30dp</dimen>
-    <dimen name="margin_bottom_for_cars">200dp</dimen>
+    <dimen name="margin_bottom_for_cars">253dp</dimen>
     <dimen name="margin_for_arrow">60dp</dimen>
     <dimen name="main_BTN_start_game_text_size">20sp</dimen>
-    <dimen name="width_of_matrix_rocks">300dp</dimen>
+    <dimen name="width_of_matrix_rocks">600dp</dimen>
     <dimen name="height_of_matrix_rocks">800dp</dimen>
     <dimen name="height_for_each_rock">120dp</dimen>
-    <dimen name="margin_in_matrix">30dp</dimen>
+    <dimen name="margin_in_matrix">23dp</dimen>
+    <dimen name="main_coin_width">35dp</dimen>
+    <dimen name="width_for_all_buttons">160dp</dimen>
+    <dimen name="height_for_all_buttons">80dp</dimen>
+    <dimen name="text_size_for_slow_or_fast_mode">15sp</dimen>
+    <dimen name="margin_of_slow_or_fast">100dp</dimen>
+    <dimen name="width_of_slow_or_fast">200dp</dimen>
+    <dimen name="text_of_button_mode">20sp</dimen>
+    <dimen name="margin_of_text_menu1">150dp</dimen>
+    <dimen name="margin_of_high_score_btn">100dp</dimen>
+    <dimen name="padding_of_frame">16dp</dimen>
+    <dimen name="size_of_score">30sp</dimen>
+    <dimen name="margin_of_score">20dp</dimen>
+    <dimen name="width_of_cars">650dp</dimen>
+    <dimen name="text_size">40sp</dimen>
 </resources>
