--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,172 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group android:scaleX="0.61"
+      android:scaleY="0.61"
+      android:translateX="99.84"
+      android:translateY="99.84">
+
+      <path
+          android:fillColor="#FF7F4F"
+          android:pathData="M 256 0 C 397.384895957 0 512 114.615104043 512 256 C 512 397.384895957 397.384895957 512 256 512 C 114.615104043 512 0 397.384895957 0 256 C 0 114.615104043 114.615104043 0 256 0 Z" />
+      <path
+          android:fillColor="#E03A00"
+          android:pathData="M511.998,256c0-23.826-3.267-46.887-9.357-68.773l-75.974-75.974L170.955,234.087l-10.119,177.669 l100.18,100.18C400.084,509.262,511.998,395.709,511.998,256z" />
+      <path
+          android:fillColor="#FFFFFF"
+          android:pathData="M426.667,258.655c-81.891-32.428-163.781,32.428-245.672,0c0-49.135,0-98.268,0-147.403 c81.891,32.428,163.781-32.428,245.672,0C426.667,160.385,426.667,209.52,426.667,258.655z" />
+      <path
+          android:fillColor="#C4C4C4"
+          android:pathData="M302.833,111.449v147.403c41.277-8.171,82.556-16.543,123.833-0.198c0-49.135,0-98.268,0-147.403 C385.389,94.906,344.111,103.277,302.833,111.449z" />
+      <group>
+          <path
+              android:fillColor="#FFFFFF"
+              android:pathData="M303.831,258.655L303.831,258.655L303.831,258.655z" />
+          <path
+              android:fillColor="#FFFFFF"
+              android:pathData="M426.667,258.655L426.667,258.655L426.667,258.655z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M205.562,258.655h-24.567l0,0c8.189,3.243,16.379,5.499,24.567,6.99V258.655z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M230.129,258.655v9.333c8.189,0.129,16.379-0.322,24.567-1.165v-8.168H230.129z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M279.264,258.655v4.667c8.189-1.427,16.379-3.044,24.567-4.667l0,0H279.264z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M328.397,106.586c-8.189,1.427-16.379,3.044-24.567,4.667h24.567V106.586z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M377.532,111.252v-9.333c-8.189-0.129-16.379,0.322-24.567,1.165v8.168H377.532z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M402.099,111.252h24.567c-8.189-3.243-16.379-5.499-24.567-6.99V111.252z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M205.562,135.82v-17.577c-8.189-1.491-16.379-3.748-24.567-6.99c0,8.189,0,16.379,0,24.567 L205.562,135.82L205.562,135.82z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M254.697,119.418c-8.189,0.843-16.379,1.295-24.567,1.165v15.234h24.567V119.418z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M279.264,135.82h24.567v-24.567c-8.189,1.62-16.379,3.239-24.567,4.667V135.82z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 328.404 111.244 H 352.971 V 135.811 H 328.404 V 111.244 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 377.535 111.244 H 402.102 V 135.811 H 377.535 V 111.244 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 205.559 135.827 H 230.126 V 160.394 H 205.559 V 135.827 Z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 254.69 135.827 H 279.257 V 160.394 H 254.69 V 135.827 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 303.838 135.827 H 328.405 V 160.394 H 303.838 V 135.827 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 352.97 135.827 H 377.537 V 160.394 H 352.97 V 135.827 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M402.099,160.385h24.567c0-8.189,0-16.379,0-24.567h-24.567V160.385z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M205.562,160.385h-24.567c0,8.189,0,16.379,0,24.567h24.567V160.385z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 230.124 160.392 H 254.691 V 184.959 H 230.124 V 160.392 Z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 279.273 160.392 H 303.84 V 184.959 H 279.273 V 160.392 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 328.404 160.392 H 352.971 V 184.959 H 328.404 V 160.392 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 377.535 160.392 H 402.102 V 184.959 H 377.535 V 160.392 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 205.559 184.958 H 230.126 V 209.525 H 205.559 V 184.958 Z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 254.69 184.958 H 279.257 V 209.525 H 254.69 V 184.958 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 303.838 184.958 H 328.405 V 209.525 H 303.838 V 184.958 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 352.97 184.958 H 377.537 V 209.525 H 352.97 V 184.958 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M402.099,209.52h24.567c0-8.189,0-16.379,0-24.567h-24.567V209.52z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M205.562,209.52h-24.567c0,8.189,0,16.379,0,24.567h24.567V209.52z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 230.124 209.523 H 254.691 V 234.09 H 230.124 V 209.523 Z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 279.273 209.523 H 303.84 V 234.09 H 279.273 V 209.523 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 328.404 209.523 H 352.971 V 234.09 H 328.404 V 209.523 Z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M 377.535 209.523 H 402.102 V 234.09 H 377.535 V 209.523 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 205.559 234.089 H 230.126 V 258.656 H 205.559 V 234.089 Z" />
+          <path
+              android:fillColor="#3F3F3F"
+              android:pathData="M 254.69 234.089 H 279.257 V 258.656 H 254.69 V 234.089 Z" />
+      </group>
+      <group>
+          <path
+              android:fillColor="#212121"
+              android:pathData="M328.397,234.087H303.83v24.567l0,0c8.189-1.622,16.377-3.239,24.567-4.667V234.087z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M352.965,250.487c8.189-0.843,16.379-1.295,24.567-1.165v-15.234h-24.567V250.487z" />
+          <path
+              android:fillColor="#212121"
+              android:pathData="M402.099,251.664c8.189,1.491,16.377,3.748,24.567,6.99l0,0c0-8.189,0-16.379,0-24.567h-24.567 V251.664z" />
+      </group>
+      <path
+          android:fillColor="#940030"
+          android:pathData="M168.712,414.618L168.712,414.618c6.784,0,12.283-5.499,12.283-12.283V107.529 c0-6.784-5.499-12.283-12.283-12.283l0,0c-6.784,0-12.283,5.499-12.283,12.283v294.805 C156.427,409.119,161.928,414.618,168.712,414.618z" />
+  </group>
 </vector>
